--- a/python2-yara/README
+++ b/python2-yara/README
@@ -4,5 +4,7 @@ YARA is a tool aimed at (but not limited to) helping malware researchers
 to identify and classify malware samples.
 
 With this library you can use YARA from your Python programs. It covers
-all YARA's features, from compiling, saving and loading rules to scanning
-files, strings and processes.
+all YARA's features, from compiling, saving and loading rules to 
+scanning files, strings and processes.
+
+python3-yara is available for use with python3.
